added settings page, server actions, db updates, clerk setup, clerk-webhook handler to update the database based on event

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,10 @@
   }
 }
 
+@theme {
+  --color-background: hsl(var(--background))
+}
+
 @layer utilities {
   .bg-primary {
     background-color: hsl(var(--primary));
