--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@
     background-color: hsl(var(--primary));
   }
 
-  .bg-primary\/5 {
+  .bg-primary\/5, .hover\:bg-primary\/5:hover {
     background-color: hsl(var(--primary) / 0.05);
   }
 
